# adacs_job_controller_client

./: .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  ARCHITECTURE.md  CURRENT_STATE.md  README.md  rust-port-plan.md
docker/: adacs_job_client.Dockerfile  docker-compose.test.yaml  docker-compose.valgrind.yaml  docker-compose.yaml
docker/scripts/: runtests.sh  runvalgrind.sh
legacy/: .clang-tidy  CMakeLists.txt  main.cpp
legacy/Bundle/: BundleDB.h  BundleInterface.h  BundleLogging.cpp  PythonInterface.cpp  PythonInterface.h  ThreadBundleMap.h
legacy/Bundle/tests/: bundle_db_tests.cpp
legacy/Core/: MessageHandler.h
legacy/Files/: FileDownload.cpp  FileUpload.cpp
legacy/Files/tests/: test_file_list.cpp
legacy/Jobs/: CancelJob.cpp  CheckStatus.cpp  JobHandling.h
legacy/Jobs/tests/: test_cancel_job.cpp  test_job_submit.cpp
legacy/Lib/: GeneralUtils.h  JobStatus.h  UpdateCheck.cpp  jobclient_schema.h
legacy/Lib/Exceptions/: my_eh_throw.cpp  my_exception_tracer_lib.cpp  unwind-cxx.h  x86_64-signal.h
legacy/Lib/Messaging/: Message.cpp
legacy/Lib/schema/: manage.py  requirements.in  schema.ddl
legacy/Lib/schema/jobclient/: apps.py
legacy/Lib/schema/jobclient/migrations/: 0001_initial.py
legacy/Tests/: utils.h
legacy/Tests/db/: sJobDb.h  sStatusDb.h
legacy/Tests/fixtures/: AbortHelperFixture.h  BundleFixture.cpp  TemporaryDirectoryFixture.h
legacy/Websocket/: WebsocketInterface.cpp  WebsocketInterface.h
rust/: CPP_TESTS.md  Cargo.toml  bin  build.rs
rust/src/: bin.rs  bundle_db.rs  bundle_interface.rs  bundle_logging.rs  bundle_manager.rs  config.rs  main.rs  messaging.rs  python_interface.rs  thread_bundle_map.rs  websocket.rs
rust/src/db/: jobstatus.rs  mod.rs
rust/src/files/: mod.rs
rust/src/jobs/: mod.rs
rust/src/tests/: bundle_db_tests.rs  bundle_logging_tests.rs  file_tests.rs  job_tests.rs  mod.rs  trigger.c  websocket_tests.rs
rust/src/tests/fixtures/: bundle_fixture.rs  mod.rs  websocket_server_fixture.rs
scripts/: build.sh  test.sh  valgrind.sh
src/: .clang-tidy  CMakeLists.txt  Cargo.toml  Settings.h  Version.h  build.rs  build_release.sh  main.cpp  run_tests.sh
src/Bundle/: BundleDB.cpp  BundleDB.h  BundleInterface.cpp  BundleInterface.h  BundleLogging.cpp  BundleLogging.h  BundleManager.cpp  BundleManager.h  PythonInterface.cpp  PythonInterface.h
src/Bundle/tests/: bundle_db_tests.cpp  bundle_logging_tests.cpp
src/Core/: MessageHandler.cpp  MessageHandler.h
src/DB/: SqliteConnector.h  sJob.h  sStatus.h
src/Files/: FileDownload.cpp  FileHandling.h  FileList.cpp  FileUpload.cpp
src/Files/tests/: test_file_download.cpp  test_file_list.cpp  test_file_upload.cpp
src/Jobs/: ArchiveJob.cpp  CancelJob.cpp  CheckStatus.cpp  DeleteJob.cpp  JobHandling.h  Submit.cpp
src/Jobs/tests/: test_archive_job.cpp  test_cancel_job.cpp  test_check_status.cpp  test_check_status_many_bundles.cpp  test_delete_job.cpp  test_job_submit.cpp
src/Lib/: GeneralUtils.cpp  UpdateCheck.cpp  jobclient_schema.h
src/Lib/Exceptions/: eh_atomics.h  my_eh_catch.cpp  my_eh_ptr.cpp  my_exception_tracer_lib.cpp  my_exception_tracer_lib.h  segvcatch.cpp  segvcatch.h  unwind-cxx.h
src/Lib/Messaging/: Message.h  tests.cpp
src/Lib/schema/: requirements.txt  schema.ddl
src/Lib/schema/jobclient/: models.py
src/Lib/schema/jobclient/migrations/: 0002_job_deleted_job_deleting.py
src/Lib/schema/schema/: settings.py  urls.py
src/Tests/: test_main.cpp  utils.cpp
src/Tests/db/: SqliteConnector.h  sJobDb.h
src/Tests/fixtures/: BundleFixture.cpp  BundleFixture.h  DatabaseFixture.h  JsonConfigFixture.h  WebsocketServerFixture.h
src/Websocket/: WebsocketInterface.cpp  WebsocketInterface.h
src/Websocket/tests/: WebsocketInterfaceTests.cpp  ping_pong_tests.cpp
src/lib/: GeneralUtils.cpp  GeneralUtils.h  jobclient_schema.h
src/lib/Exceptions/: README.md  eh_atomics.h  my_eh_catch.cpp  my_eh_ptr.cpp  my_eh_throw.cpp  my_exception_tracer_lib.cpp  my_exception_tracer_lib.h  unwind-cxx.h  x86_64-signal.h
src/lib/Messaging/: Message.cpp  Message.h  tests.cpp
src/lib/schema/: generate_ddl.sh  schema.ddl
src/lib/schema/jobclient/: models.py
src/lib/schema/jobclient/migrations/: 0001_initial.py
src/src/: bin.rs  bundle_db.rs  bundle_interface.rs  bundle_logging.rs  bundle_manager.rs  config.rs  daemon.rs  db_bridge.rs  logging.rs  main.rs  messaging.rs  python_interface.rs  thread_bundle_map.rs  update_check.rs  websocket.rs
src/src/db/: job.rs  jobstatus.rs  mod.rs
src/src/files/: mod.rs
src/src/jobs/: mod.rs
src/src/tests/: bundle_db_tests.rs  bundle_interface_tests.rs  bundle_logging_tests.rs  file_tests.rs  job_cancel_tests.rs  job_delete_tests.rs  job_tests.rs  main_tests.rs  mod.rs
src/src/tests/fixtures/: bundle_fixture.rs  database_fixture.rs  mod.rs  temporary_directory_fixture.rs  websocket_server_fixture.rs
src/testing/: config.json
src/testing/bundle/: bundle.py
src/tests/: utils.cpp  utils.h
src/tests/db/: SqliteConnector.h  sJobDb.h  sStatusDb.h
src/tests/fixtures/: AbortHelperFixture.h  BundleFixture.cpp  BundleFixture.h  DatabaseFixture.h  JsonConfigFixture.h  TemporaryDirectoryFixture.h  WebsocketServerFixture.h
src/tests/fixtures/certs/: test.crt  test.crt.h  test.key.h  test.privkey
src/utils/: GeneralUtils.cpp  GeneralUtils.h
